force-app/main/default/objects/Tegra_Embd_Regstr_Expiry_Notifications__c/Tegra_Embd_Regstr_Expiry_Notifications__c.object-meta.xml
<CustomObject>
    <description>This object will have the Email Notifications those sent to the users by the batch class &apos;TegraEmb_Regstr_Expirations_Batch.cls&apos;</description>
    <label>Tegra Embd Regstr Expiry Notifications</label>
    <nameField>
        <displayFormat>EN-{00000000}</displayFormat>
        <label>Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tegra Embd Regstr Expiry Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>