force-app/main/default/objects/Tegra_Embd_Regstr_Expiry_Notifications__c/fields/First_Notification_Sent_Cc_Addresses__c.field-meta.xml
<CustomField>
    <fullName>First_Notification_Sent_Cc_Addresses__c</fullName>
    <label>First Notification Sent Cc Addresses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>