force-app/main/default/objects/Tegra_Embd_Regstr_Expiry_Notifications__c/fields/First_Notification_Sent_On__c.field-meta.xml
<CustomField>
    <fullName>First_Notification_Sent_On__c</fullName>
    <label>First Notification Sent On</label>
    <type>Date</type>
</CustomField>