force-app/main/default/objects/Tegra_Embd_Regstr_Expiry_Notifications__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Tegra_Embedded_Partner_Opportunity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Tegra Embd Regstr Expiry Notifications</relationshipLabel>
    <relationshipName>Tegra_Embd_Regstr_Expiry_Notifications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>