force-app/main/default/objects/Tegra_Embd_Regstr_Expiry_Notifications__c/fields/Second_Notification_Sent_On__c.field-meta.xml
<CustomField>
    <fullName>Second_Notification_Sent_On__c</fullName>
    <label>Second Notification Sent On</label>
    <type>Date</type>
</CustomField>