force-app/main/default/objects/Tegra_Embd_Regstr_Expiry_Notifications__c/fields/Second_Notification_Sent_To_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Second_Notification_Sent_To_Addresses__c</fullName>
    <label>Second Notification Sent To Addresses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>