force-app/main/default/objects/Tegra_Embd_Regstr_Expiry_Notifications__c/fields/Third_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Third_Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Third Notification Sent</label>
    <type>Checkbox</type>
</CustomField>