force-app/main/default/objects/Tegra_Embd_Regstr_Expiry_Notifications__c/fields/Third_Notification_Sent_On__c.field-meta.xml
<CustomField>
    <fullName>Third_Notification_Sent_On__c</fullName>
    <label>Third Notification Sent On</label>
    <type>Date</type>
</CustomField>