force-app/main/default/objects/Tegra_Embd_Regstr_Expiry_Notifications__c/fields/Third_Notification_Sent_To_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Third_Notification_Sent_To_Addresses__c</fullName>
    <label>Third Notification Sent To Addresses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>