force-app/main/default/objects/Tegra_Embd_Regstr_Expiry_Notifications__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>First_Notification_Sent__c</columns>
    <columns>First_Notification_Sent_On__c</columns>
    <columns>Second_Notification_Sent__c</columns>
    <columns>Second_Notification_Sent_On__c</columns>
    <columns>Third_Notification_Sent__c</columns>
    <columns>Third_Notification_Sent_On__c</columns>
    <columns>First_Notification_Sent_To_Addresses__c</columns>
    <columns>First_Notification_Sent_Cc_Addresses__c</columns>
    <columns>Second_Notification_Sent_To_Addresses__c</columns>
    <columns>Second_Notification_Sent_Cc_Addresses__c</columns>
    <columns>Third_Notification_Sent_To_Addresses__c</columns>
    <columns>Third_Notification_Sent_Cc_Addresses__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>